fixed the actionsMenu to not bleed with the searchbar

--- a/karl/views/static/ux2/main.less
+++ b/karl/views/static/ux2/main.less
@@ -89,6 +89,9 @@ a#global-logo {
         }
     }
 }
+.backto {
+    display: block;
+}
 
 .sras-searchbar {
     text-align: center;
